# cognilite

./: AGENTS.md  Cargo.toml  MANUAL.md  README.md  ROADMAP.md
.cognilite/neurons/afferent/: neuron.toml
.cognilite/neurons/afferent/thoughts/: input.md
.cognilite/neurons/architect/: neuron.toml
.cognilite/neurons/axon/: neuron.toml
.cognilite/neurons/cingulate_gate/: neuron.toml
.cognilite/neurons/cortex/: neuron.toml
.cognilite/neurons/efferent/: neuron.toml
.cognilite/neurons/engram/: neuron.toml
.cognilite/neurons/gyrus/: neuron.toml
.cognilite/neurons/hippocampus/: neuron.toml
.cognilite/neurons/insula/: neuron.toml
.cognilite/neurons/parietal/: neuron.toml
.cognilite/neurons/prefrontal/: neuron.toml
.cognilite/neurons/synapse/: neuron.toml
.cognilite/neurons/thalamus/: neuron.toml
.cognilite/templates/: audit.md  explain.md  refactor.md  review.md  test.md
behaviours/: cat.toml
neurons/knowledge/: neuron.toml
neurons/knowledge/thoughts/: knowledge.md  transparency.md
neurons/shell/: neuron.toml
neurons/shell/thoughts/: rules.md
neurons/terminal/: neuron.toml
src/: app.rs  behaviour.rs  clipboard.rs  events.rs  headless.rs  main.rs  ollama.rs  server.rs  synapse.rs  tools.rs  ui.rs  websocket.rs  ws_client.rs
src/adapter/: headless_runner.rs  http_server.rs  keyboard.rs  mod.rs  ollama.rs  tools_native.rs  ws_client.rs  ws_server.rs
src/domain/: config.rs  message.rs  mod.rs  prompt.rs  tags.rs
src/runtime/: input.rs  mod.rs  picker.rs  pinned.rs  room.rs  tools.rs
src/view/: tui.rs
(+28 files in other folders)
