[package]
name = "cognilite"
version = "0.1.0"
edition = "2024"
description = "Lightweight TUI for chatting with local Ollama models"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
ureq = { version = "2", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
